--- a/styles.css
+++ b/styles.css
@@ -136,14 +136,99 @@ footer{
 .dashboard-modal input{
     font-size: 3rem;
     border: 1px solid #262626;
-    border-radius: 15px;
+    border-radius: 35px 15px;
     outline: none;
-    padding: 10px;
     text-transform: uppercase;
     text-align: center;
 }
 
+.active-input{
+    transition: 1s;
+    box-shadow: green 1px 1px 1px 1px;
+}
 
+#set-word input,
+#set-word div{
+    width: 80px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: 1px #262626 solid;
+    border-radius: 35px 15px;
+    padding: 0px;
+    margin: 0px 10px;
+    font-size: 3rem;
+    font-family: 'Nova Mono', monospace;
+    text-transform: uppercase;
+    text-align: center;
+}
 
+#set-word div{
+    border: 1px #EDE312 solid;
+    background-color: #ffffff2a;
+}
 
+.word-guesser{
+    display: flex;
+}
 
+/* kEY BOARD css */
+
+    #write {
+        margin: 0 0 5px;
+        padding: 5px;
+        width: 671px;
+        height: 200px;
+        font: 1em/1.5 Verdana, Sans-Serif;
+        background: #fff;
+        border: 1px solid #414EB5;
+        border-radius: 5px;
+    }
+    #keyboard {
+        font-family: 'Nova Mono', monospace;
+        text-transform: uppercase;
+        margin: 0;
+        padding: 0;
+    }
+    .keyboard-line{
+        list-style: none;
+        display: flex;
+        justify-content: center;
+    }
+        #keyboard li {
+        float: left;
+        margin: 0 5px 5px 0;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        background: #fff;
+        border: 1px solid #f9f9f9;
+        border-radius: 5px;    
+        }
+            .lastitem {
+            margin-right: 0;
+            }
+            
+            .uppercase {
+            text-transform: uppercase;
+            }
+            
+            #keyboard .space {
+            clear: left;
+            width: 681px;
+            }
+            
+            .on {
+            display: none;
+            }
+            
+            #keyboard li:hover {
+            position: relative;
+            top: 1px;
+            left: 1px;
+            border-color: #e5e5e5;
+            cursor: pointer;
+            }
